add css and js file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <html>
     <head>
       <title>Harshil's Profile</title>
+      <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js" type="text/javascript"></script>
+        <script src="libraries/JS/index.js" type="text/javascript"></script>
+        <link href="libraries/CSS/index.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
       <div> This is testing blog </div>
