--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		    	<div class="comments">
 		    	</div>
 		    </div>
+		    <div class="my-container">
+			    <h1>Scotch Scotch Scotch</h1>
+			    <img src="http://s8.postimg.org/8x5x2x8et/sfo_bridge.jpg">
+			</div>
 	    </div>
     </body>
 </html>
